# doubaoime-asr

./: .gitignore  AGENTS.md  Agent.MD  README.md  doubao-voice-agent.spec  gen_proto.sh  pyproject.toml  wave_protocol.md
.agentdocs/: index.md  system-prompt.md
.agentdocs/workflow/: 260330-voice-input-refactor.md  260408-architecture-compliance-report.md  260408-deployment-rollback-plan.md  260408-final-acceptance-report.md  260408-final-delivery-checklist.md  260408-final-delivery-package-summary.md  260408-final-delivery-signoff-summary.md  260408-module-refactor-summary.md  260408-project-architecture-baseline.md  260408-project-target-architecture.md  260408-refactor-delivery-progress.md  260408-regression-test-report.md  coordinator-refactor-plan.md
.github/workflows/: ci.yml  release.yml
docs/: native-bridge-protocol.md  native-tip-adr.md  native-tip-session-model.md
doubaoime_asr/: __init__.py  _runtime.py  asr.py  asr_models.py  asr_protocol.py  audio.py  config.py  ner.py  wave_client.py
doubaoime_asr/agent/: __init__.py  app.py  asr_preflight.py  clipboard_fallback.py  composition.py  config.py  config_update_plan.py  coordinator.py  coordinator_cli.py  coordinator_config_runtime.py  coordinator_finalization.py  coordinator_privileges.py  coordinator_transcript_flow.py  coordinator_tray.py  coordinator_worker_events.py  events.py  hotkey.py  hotkey_service.py  injection_manager.py  injection_service.py  input_injector.py  interim_dispatcher.py  main.py  overlay_preview.py  overlay_preview_cpp.py  overlay_protocol.py  overlay_scheduler.py  overlay_service.py  protocol.py  runtime_logging.py  service_host.py  service_main.py  service_protocol.py  service_runtime.py  service_session_manager.py  service_session_runner.py  service_transport.py  service_worker_bridge.py  service_worker_session.py  session_manager.py  (+25 more)
examples/: mic_realtime.py  ner.py
native_tip/: CMakeLists.txt
native_tip/include/: Guid.h
native_tip/src/: DllMain.cpp  Register.cpp  TipCompositionManager.cpp  TipCompositionManager.h  TipContextGate.cpp  TipContextGate.h  TipEditSession.cpp  TipEditSession.h  TipGatewayHostMain.cpp  TipGatewayServer.cpp  TipGatewayServer.h  TipServiceClient.cpp  TipServiceClient.h  TipTextService.cpp  TipTextService.h  TipTraceSink.cpp  TipTraceSink.h
native_tip/tests/: tip_spike_smoke.cpp
overlay_ui/: CMakeLists.txt  overlay_ui.cpp  overlay_window.cpp  overlay_window.h
scripts/: build_overlay_ui.ps1  build_voice_agent.ps1  voice_agent_entry.py
tests/: test_agent_composition.py  test_agent_config.py  test_agent_controller.py  test_agent_hotkey.py  test_agent_stable_cli.py  test_asr.py  test_asr_protocol.py  test_config_update_plan.py  test_coordinator.py  test_events.py  test_focus_target_profiles.py  test_hotkey_service.py  test_injection_manager.py  test_injection_service.py  test_input_injector.py  test_native_tip_gateway_integration.py  test_overlay_preview_cpp.py  test_overlay_preview_wrapper.py  test_overlay_protocol.py  test_overlay_scheduler.py  test_overlay_service.py  test_runtime.py  test_service_host.py  test_service_protocol.py  test_service_runtime.py  test_service_session_manager.py  test_service_session_runner.py  test_service_transport.py  test_service_worker_bridge.py  test_session_manager.py  test_settings_window.py  test_stable_simple_app.py  test_text_polisher.py  test_tip_gateway.py  test_transcript_utils.py  test_wave_client.py  test_win_audio_output.py  test_win_privileges.py  test_worker_main.py
